--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Gatsby with Tailwind",
+  "name": "Genuit Group - Annual Review 2022",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby ad Tailwind",
+  "description": "A look at Genuit Group's Annual Review for 2022",
   "version": "0.1.0",
   "author": "Roycroft Labs",
   "dependencies": {
+    "classnames": "^2.3.2",
     "gatsby": "^5.8.1",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-manifest": "^5.8.0",
@@ -37,7 +38,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/roycroftLabs/genuit-ar22"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
