--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Roycroft Labs",
   "dependencies": {
+    "@fontsource/poppins": "^4.5.10",
     "classnames": "^2.3.2",
     "gatsby": "^5.8.1",
     "gatsby-plugin-image": "^3.8.0",
