--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/poppins": "^4.5.10",
     "classnames": "^2.3.2",
     "gatsby": "^5.8.1",
+    "gatsby-plugin-google-tagmanager": "^5.8.0",
     "gatsby-plugin-image": "^3.8.0",
     "gatsby-plugin-manifest": "^5.8.0",
     "gatsby-plugin-react-svg": "^3.3.0",
